miniextendr-macros/tests/ui/derive_externalptr_generic.rs
//! Test: derive ExternalPtr on generic struct should fail.

use miniextendr_macros::ExternalPtr;

#[derive(ExternalPtr)]
struct MyGeneric<T> {
    data: T,
}

fn main() {}
